<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="createAccount">Create Account</string>
    <string name="fullname">Full Name</string>
    <string name="email.com">email@email.com</string>
    <string name="pass">Password</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="emailId">Email ID</string>
    <string name="password">Password</string>
    <string name="friendname">Friend Name</string>
    <string name="logout">LogOut</string>
    <string name="writemsghere">Write your Message Here...</string>
    <string name="message">Message</string>
    <string name="username">User Name</string>
    <string name="groupname">Group Name</string>
    <string name="groupdescription">Group Description</string>
    <string name="searchgroups">Search Groups</string>
    <string name="mygroups">My Groups</string>
    <string name="date_util_term_less">less than</string>
    <string name="date_util_term_a">a</string>
    <string name="date_util_term_an">an</string>

    <string name="date_util_unit_second">second</string>
    <string name="date_util_unit_seconds">seconds</string>
    <string name="date_util_unit_minute">minute</string>
    <string name="date_util_unit_minutes">minutes</string>
    <string name="date_util_unit_hour">hour</string>
    <string name="date_util_unit_hours">hours</string>
    <string name="date_util_unit_day">day</string>
    <string name="date_util_unit_days">days</string>
    <string name="date_util_unit_month">month</string>
    <string name="date_util_unit_months">months</string>
    <string name="date_util_unit_year">year</string>
    <string name="date_util_unit_years">years</string>

    <string name="date_util_prefix_lt">less than a</string>
    <string name="date_util_prefix_about">about</string>
    <string name="date_util_prefix_over">over</string>
    <string name="date_util_prefix_almost">almost</string>

    <string name="date_util_suffix">ago</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="conversation">Conversation</string>
    <string name="delete">Delete</string>
    <string name="groups">Groups</string>
    <string name="friends">Friends</string>
    <string name="fr_request">Friend Request</string>
</resources>
